--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "postcss-preset-env": "^9.3.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
